# ScalpAssistant

./: .gitignore  README.md  build.bat
src/: Application.cpp  Application.hpp  CMakeLists.txt  Exchange.cpp  Exchange.hpp  System.hpp  TransaqConnector.cpp  TransaqConnector.hpp  main.cpp
src/lib/finam/: Functions.hpp
